# nuclear-fusion

./: CMakeLists.txt  README.md  bindings.cpp  main.cpp
include/: brush.hpp  fvector.hpp  nf.hpp  window.hpp
src/: brush.cpp  nf.cpp  window.cpp
